# cognitive_games

./: CMakeLists.txt  C_2_vectors.txt  C_3_vectors.txt  C_4_vectors.txt  C_5_vectors_.txt  C_test_vectors.txt  C_vectors.txt  L_2_vectors.txt  L_3_vectors.txt  L_4_vectors_.txt  L_test_vectors.txt  L_vectors.txt  L_vectors_002.txt  None_bg_vectors.txt  None_letter_2_vectors.txt  None_letter_3_vectors_.txt  None_letter_vectors.txt  None_vectors_last.txt  README.md  build_script  comparison effectivenet Tensor 0.txt  main.cpp  main_class_tll.cpp  main_snippets.cpp  main_vector_files.cpp  main_vectors.cpp  python_to_cpp.cpp  run_script  tensorflowLiteInstructions.txt  vectors.txt
build_class/: main
build_class_tll/: Makefile
build_minimal/: Makefile  main
build_python_to_cpp/: Makefile  main
build_screenrecord/: Makefile  main
build_sushi1/: main
build_test/: main
build_vector_files/: main  terminal_command.txt
build_vectors/: Makefile  main
data20240505/: C_test_vectors.txt  C_vectors.txt  C_vectors_001.txt  C_vectors_002.txt  C_vectors_last.txt  L_vectors.txt  L_vectors_001.txt  L_vectors_last.txt
delete/build_before_comm/: cmake_install.cmake  main
delete/build_class_tll/: CMakeCache.txt  main
delete/build_functional_back_up/: main
visnodes/: class_clean.py  vis_nodes.py
